--- a/style.css
+++ b/style.css
@@ -195,6 +195,8 @@ margin-right: 1em;
 }
 
 .box {
+    /* Pour notre grille on peut utiliser grid-column-start:1, grid-column-end:4, grid-row-start, grid-row-end */
+    /* On peut aussi utiliser les déclarations grid-row: 1 / 3 et grid-column: 1 / 3 */
     border: 1px solid #556b2f ;
     height: 100px; /* Cette boîte force une hauteur à la boîte, ce qui peut rentrer en conflit
                     avec les valeurs indiqués dans .contaier {grid-template-column} */
